# burnertair

./: CHANGELOG.md  README.md  TODO.md  burnatair.cabal  characters.md
app/: Character.hs  Game.hs  Main.hs
app/Game/: Card.hs  Lens.hs
