cabal-version:      3.0
name:               burnatair
version:            0.1.0.0
synopsis:           A cute, educational, multiplayer card game.

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             burnermel
maintainer:         anonimomelotee@gmail.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files:
    CHANGELOG.md
    README.md

executable burnatair
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:      Card,
                        Character,
                        Game

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: OverloadedStrings

    -- other-extensions:
    build-depends:      base ^>=4.16.4.0,
                        text

    hs-source-dirs:     app
    default-language:   Haskell2010

    ghc-options:        -Wall -O2