cabal-version:      3.0
name:               burnatair
version:            0.1.0.0
synopsis:           A cute, educational, multiplayer card game.

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             burnermel
-- maintainer:

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files:
    CHANGELOG.md
    README.md

executable burnatair
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:      Game,

                        Game.Card,
                        Game.Card.Graphics,
                        Game.Card.Graphics.ASCII,
                        Game.Card.Graphics.Image,
                        Game.Card.Graphics.Text,

                        Game.Character,
                        Game.Character.Trait,

                        Game.Data,
                        Game.Data.Cards,
                        Game.Data.Characters,
                        Game.Data.Effects,
                        Game.Data.Traits,

                        Game.Effect,

                        Game.IO,
                        Game.IO.GUI,
                        Game.IO.Text,
                        
                        Game.Player,
                        
                        Game.State,
                        Game.State.Lens

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: OverloadedStrings

    -- other-extensions:
    build-depends:      base       ^>= 4.16.4.0,
                        containers >= 0.6.5 && < 0.7,
                        prompt     >= 0.1.1 && < 0.2,
                        text       >= 1.2.5 && < 1.3

    hs-source-dirs:     app
    default-language:   Haskell2010

    ghc-options:        -Wall -O2